# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../dlp_permission_service.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "cancelretentionstate_fuzzer:CancelRetentionStateFuzzTest",
    "cancelretentionstatestub_fuzzer:CancelRetentionStateStubFuzzTest",
    "cleansandboxconfig_fuzzer:CleanSandboxConfigFuzzTest",
    "cleansandboxconfigstub_fuzzer:CleanSandboxConfigStubFuzzTest",
    "clearunreservedsandbox_fuzzer:ClearUnreservedSandboxFuzzTest",
    "clearunreservedsandboxstub_fuzzer:ClearUnreservedSandboxStubFuzzTest",
    "generatecert_fuzzer:GenerateCertFuzzTest",
    "generatecertstub_fuzzer:GenerateCertStubFuzzTest",
    "getdlpfilevisitrecord_fuzzer:GetDlpFileVisitRecordFuzzTest",
    "getdlpfilevisitrecordstub_fuzzer:GetDlpFileVisitRecordStubFuzzTest",
    "getdlpgatheringpolicy_fuzzer:GetDlpGatheringPolicyFuzzTest",
    "getdlpgatheringpolicystub_fuzzer:GetDlpGatheringPolicyStubFuzzTest",
    "getdlpsupportfiletype_fuzzer:GetDlpSupportFileTypeFuzzTest",
    "getdlpsupportfiletypestub_fuzzer:GetDlpSupportFileTypeStubFuzzTest",
    "getmdmpolicy_fuzzer:GetMDMPolicyFuzzTest",
    "getmdmpolicystub_fuzzer:GetMDMPolicyStubFuzzTest",
    "getretentionsandboxlist_fuzzer:GetRetentionSandboxListFuzzTest",
    "getretentionsandboxliststub_fuzzer:GetRetentionSandboxListStubFuzzTest",
    "getsandboxconfig_fuzzer:GetSandboxConfigFuzzTest",
    "getsandboxconfigstub_fuzzer:GetSandboxConfigStubFuzzTest",
    "getsandboxexternalauthorization_fuzzer:GetSandboxExternalAuthorizationFuzzTest",
    "getsandboxexternalauthorizationstub_fuzzer:GetSandboxExternalAuthorizationStubFuzzTest",
    "installdlpsandbox_fuzzer:InstallDlpSandboxFuzzTest",
    "installdlpsandboxstub_fuzzer:InstallDlpSandboxStubFuzzTest",
    "isdlpfeatureprovided_fuzzer:IsDlpFeatureProvidedFuzzTest",
    "isdlpfeatureprovidedstub_fuzzer:IsDlpFeatureProvidedStubFuzzTest",
    "isindlpsandbox_fuzzer:IsInDlpSandboxFuzzTest",
    "isindlpsandboxstub_fuzzer:IsInDlpSandboxStubFuzzTest",
    "parsecert_fuzzer:ParseCertFuzzTest",
    "parsecertstub_fuzzer:ParseCertStubFuzzTest",
    "parsedlpheader_fuzzer:ParseDlpHeaderFuzzTest",
    "querydlpfileaccess_fuzzer:QueryDlpFileAccessFuzzTest",
    "querydlpfileaccessstub_fuzzer:QueryDlpFileAccessStubFuzzTest",
    "querydlpfilecopyablebytokenid_fuzzer:QueryDlpFileCopyableByTokenIdFuzzTest",
    "querydlpfilecopyablebytokenidstub_fuzzer:QueryDlpFileCopyableByTokenIdStubFuzzTest",
    "registerdlpsandboxchangecallback_fuzzer:RegisterDlpSandboxChangeCallbackFuzzTest",
    "registerdlpsandboxchangecallbackstub_fuzzer:RegisterDlpSandboxChangeCallbackStubFuzzTest",
    "registeropendlpfilecallback_fuzzer:RegisterOpenDlpFileCallbackFuzzTest",
    "registeropendlpfilecallbackstub_fuzzer:RegisterOpenDlpFileCallbackStubFuzzTest",
    "setmdmpolicy_fuzzer:SetMDMPolicyFuzzTest",
    "setmdmpolicystub_fuzzer:SetMDMPolicyStubFuzzTest",
    "setretentionstate_fuzzer:SetRetentionStateFuzzTest",
    "setretentionstatestub_fuzzer:SetRetentionStateStubFuzzTest",
    "setsandboxconfig_fuzzer:SetSandboxConfigFuzzTest",
    "setsandboxconfigstub_fuzzer:SetSandboxConfigStubFuzzTest",
    "uninstalldlpsandbox_fuzzer:UninstallDlpSandboxFuzzTest",
    "uninstalldlpsandboxstub_fuzzer:UninstallDlpSandboxStubFuzzTest",
    "unregisterdlpsandboxchangecallback_fuzzer:UnRegisterDlpSandboxChangeCallbackFuzzTest",
    "unregisterdlpsandboxchangecallbackstub_fuzzer:UnRegisterDlpSandboxChangeCallbackStubFuzzTest",
    "unregisteropendlpfilecallback_fuzzer:UnRegisterOpenDlpFileCallbackFuzzTest",
    "unregisteropendlpfilecallbackstub_fuzzer:UnRegisterOpenDlpFileCallbackStubFuzzTest",
  ]
}

config("napi_fuzz_config") {
  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  configs = [ "${dlp_root_dir}/config:coverage_flags" ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
}

config("stub_fuzz_config") {
  include_dirs = []
  configs = [ ":napi_fuzz_config" ]
  include_dirs += [
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/include",
  ]
}

config("stub_fuzz_need_skip_timer_config") {
  cflags_cc = []
  configs = [ ":stub_fuzz_config" ]
  cflags_cc += [ "-DDLP_FUZZ_TEST" ]
}
