# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../dlp_permission_service.gni")

ohos_unittest("dlp_file_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/test/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/test/mock/c_mock_common.cpp",
    "${dlp_root_dir}/frameworks/test/mock/dlp_permission_kit.cpp",
    "unittest/src/dlp_file_test.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]

  configs = [ "${dlp_root_dir}/config:coverage_flags" ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse:libdlpparse_inner",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "zlib:shared_libz",
  ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

ohos_unittest("dlp_fuse_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/test/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/test/mock/c_mock_common.cpp",
    "${dlp_root_dir}/frameworks/test/mock/dlp_permission_kit.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_link_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_link_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/fuse_daemon.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_crypt.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_kits.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "unittest/src/dlp_fuse_test.cpp",
    "unittest/src/fuse_daemon_test.cpp",
    "unittest/src/fuse_mock.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]

  configs = [ "${dlp_root_dir}/config:coverage_flags" ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "libfuse:libfuse",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "zlib:shared_libz",
  ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

group("unittest") {
  testonly = true
  deps = [
    ":dlp_file_test",
    ":dlp_fuse_test",
  ]
}
