# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../dlp_permission_service.gni")

group("param_files") {
  deps = [
    ":dlp_config.json",
    ":dlp_permission.para",
    ":dlp_permission.para.dac",
  ]
}

ohos_prebuilt_etc("dlp_permission.para") {
  source = "${dlp_root_dir}/services/dlp_permission/sa/etc/dlp_permission.para"
  module_install_dir = "etc/param"
  part_name = "dlp_permission_service"
  subsystem_name = "security"
}

ohos_prebuilt_etc("dlp_permission.para.dac") {
  source =
      "${dlp_root_dir}/services/dlp_permission/sa/etc/dlp_permission.para.dac"
  module_install_dir = "etc/param"
  part_name = "dlp_permission_service"
  subsystem_name = "security"
}

ohos_prebuilt_etc("dlp_config.json") {
  source = "${dlp_root_dir}/services/dlp_permission/sa/etc/dlp_config.json"
  module_install_dir = ""
  part_name = "dlp_permission_service"
  subsystem_name = "security"
}
